Refactor and update API of node filtered triangle count
Co-Authored-By: Ioannis Panagiotas
<ioannis.panagiotas@neotechnology.com>